--- a/address-book.html
+++ b/address-book.html
@@ -18,11 +18,11 @@
             <form id="new-contact">
               <div class="form-group">
                 <label for="new-first-name">First Name</label>
-                <input type="text" class="form-control" id="new-first-name">
+                <input type="text" class="form-control" id="new-first-name" placeholder="First Name">
               </div>
               <div class="form-group">
                 <label for="new-last-name">Last Name</label>
-                <input type="text" class="form-control" id="new-last-name">
+                <input type="text" class="form-control" id="new-last-name" placeholder="Last Name">
               </div>
               <div class="form-group">
                 <label for="new-street1">Address Line 1</label>
@@ -34,15 +34,15 @@
               </div>
               <div class="form-group">
                 <label for="new-city">City</label>
-                <input type="text" class="form-control" id="new-city">
+                <input type="text" class="form-control" id="new-city" placeholder="City">
               </div>
               <div class="form-group">
                 <label for="new-state">State</label>
-                <input type="text" class="form-control" id="new-state">
+                <input type="text" class="form-control" id="new-state" placeholder="State">
               </div>
               <div class="form-group">
                 <label for="new-zip">Zip</label>
-                <input type="text" class="form-control" id="new-zip">
+                <input type="text" class="form-control" id="new-zip" placeholder="Zip Code">
               </div>
 
               <button type="submit" class="btn">Add</button>
