--- a/address-book.html
+++ b/address-book.html
@@ -16,37 +16,45 @@
           <div id="new-contact">
             <h2>Add a contact:</h2>
             <form id="new-contact">
+
               <div class="form-group">
                 <label for="new-first-name">First Name</label>
                 <input type="text" class="form-control" id="new-first-name" placeholder="First Name">
               </div>
+
               <div class="form-group">
                 <label for="new-last-name">Last Name</label>
                 <input type="text" class="form-control" id="new-last-name" placeholder="Last Name">
               </div>
-              <div class="form-group">
-                <label for="new-street1">Address Line 1</label>
-                <input type="text" class="form-control" id="new-street1" placeholder="Street Address, P.O. box, company name, c/o">
+
+              <div id="new-addresses">
+                <div class="form-group">
+                  <label for="new-street1">Address Line 1</label>
+                  <input type="text" class="form-control" class="new-street1" placeholder="Street Address, P.O. box, company name, c/o">
+                </div>
+                <div class="form-group">
+                  <label for="new-street2">Address Line 2</label>
+                  <input type="text" class="form-control" class="new-street2" placeholder="Apartment, suite, unit, building, floor, etc.">
+                </div>
+                <div class="form-group">
+                  <label for="new-city">City</label>
+                  <input type="text" class="form-control" class="new-city" placeholder="City">
+                </div>
+                <div class="form-group">
+                  <label for="new-state">State</label>
+                  <input type="text" class="form-control" class="new-state" placeholder="State">
+                </div>
+                <div class="form-group">
+                  <label for="new-zip">Zip</label>
+                  <input type="text" class="form-control" class="new-zip" placeholder="Zip Code">
+                </div>
               </div>
-              <div class="form-group">
-                <label for="new-street2">Address Line 2</label>
-                <input type="text" class="form-control" id="new-street2" placeholder="Apartment, suite, unit, building, floor, etc.">
-              </div>
-              <div class="form-group">
-                <label for="new-city">City</label>
-                <input type="text" class="form-control" id="new-city" placeholder="City">
-              </div>
-              <div class="form-group">
-                <label for="new-state">State</label>
-                <input type="text" class="form-control" id="new-state" placeholder="State">
-              </div>
-              <div class="form-group">
-                <label for="new-zip">Zip</label>
-                <input type="text" class="form-control" id="new-zip" placeholder="Zip Code">
-              </div>
+
+              <button type="submit" class="btn btn-primary" id="add-address">Additional Address</button>
 
               <button type="submit" class="btn">Add</button>
             </form>
+            <br>
 
             <h2>Contacts:</h2>
             <ul id="contacts">
