allow address information to be displayed

--- a/address-book.html
+++ b/address-book.html
@@ -50,7 +50,7 @@
                 </div>
               </div>
 
-              <button type="submit" class="btn btn-primary" id="add-address">Additional Address</button>
+              <span class="btn btn-primary" id="add-address">Additional Address</span>
 
               <button type="submit" class="btn">Add</button>
             </form>
@@ -68,12 +68,12 @@
             <h2></h2>
 
             <p>Address: <span class="address"></span></p>
-            <!-- <p>Last Name: <span class="last-name"></span></p>
+            <p>Last Name: <span class="last-name"></span></p>
             <p>Address Line 1: <span class="new-street1"></span></p>
             <p>Address Line 2: <span class="new-street2"></span></p>
             <p>City: <span class="new-city"</span></p>
             <p>State: <span class="new-state"</span></p>
-            <p>Zip: <span class="new-zip"</span></p> -->
+            <p>Zip: <span class="new-zip"</span></p>
 
           </div>
         </div>
