--- a/address-book.html
+++ b/address-book.html
@@ -27,26 +27,26 @@
                 <input type="text" class="form-control" id="new-last-name" placeholder="Last Name">
               </div>
 
-              <div id="new-addresses">
+              <div class="new-addresses">
                 <div class="form-group">
                   <label for="new-street1">Address Line 1</label>
-                  <input type="text" class="form-control" class="new-street1" placeholder="Street Address, P.O. box, company name, c/o">
+                  <input type="text" class="form-control new-street1" placeholder="Street Address, P.O. box, company name, c/o">
                 </div>
                 <div class="form-group">
                   <label for="new-street2">Address Line 2</label>
-                  <input type="text" class="form-control" class="new-street2" placeholder="Apartment, suite, unit, building, floor, etc.">
+                  <input type="text" class="form-control new-street2" placeholder="Apartment, suite, unit, building, floor, etc.">
                 </div>
                 <div class="form-group">
                   <label for="new-city">City</label>
-                  <input type="text" class="form-control" class="new-city" placeholder="City">
+                  <input type="text" class="form-control new-city" placeholder="City">
                 </div>
                 <div class="form-group">
                   <label for="new-state">State</label>
-                  <input type="text" class="form-control" class="new-state" placeholder="State">
+                  <input type="text" class="form-control new-state" placeholder="State">
                 </div>
                 <div class="form-group">
                   <label for="new-zip">Zip</label>
-                  <input type="text" class="form-control" class="new-zip" placeholder="Zip Code">
+                  <input type="text" class="form-control new-zip" placeholder="Zip Code">
                 </div>
               </div>
 
@@ -59,6 +59,7 @@
             <h2>Contacts:</h2>
             <ul id="contacts">
 
+
             </ul>
           </div>
         </div>
@@ -67,13 +68,16 @@
           <div id="show-contact">
             <h2></h2>
 
-            <p>Address: <span class="address"></span></p>
+            <ul class="address-list">
+            </ul>
+
+            <!-- <p>Address: <span class="address"></span></p>
             <p>Last Name: <span class="last-name"></span></p>
             <p>Address Line 1: <span class="new-street1"></span></p>
             <p>Address Line 2: <span class="new-street2"></span></p>
             <p>City: <span class="new-city"</span></p>
             <p>State: <span class="new-state"</span></p>
-            <p>Zip: <span class="new-zip"</span></p>
+            <p>Zip: <span class="new-zip"</span></p> -->
 
           </div>
         </div>
